# custom_malloc_plus_tgbuntu

./: CMakeLists.txt  Config.h.in  README.md  custom_malloc.c  main.cpp
custom_malloc/: custom  custom_malloc  custom_malloc.c  custom_malloc.h
headers/: custom_malloc.h  main.h
sources/: comp_scince_mem_alloc.txt  mymalloc.txt
